# memfor

./: LICENSE  Memfor.spec  README.md  pyproject.toml
src/: main.py
src/core/: case_management.py  vol_wrapper.py
src/ui/: case_details.py  landing_page.py  main_window.py
src/utils/: logger.py
